fix(PR#6评审): CI失败不映射到conflict、恢复Draft检测、GitLab/GitHub reviewer语义统一、GitPlatformException、日期校验、CORS配置外置、cursor样式、@Async事务边界